# anticheat-injector

./: .gitignore  .gitpod.yml  .replit  README.md  compile.sh  gradlew  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  imgui-overlay.cpp  memory-hook.cpp  memory-hook.h  native-lib.cpp
app/src/main/java/com/anticheat/injector/: InjectorService.kt  MainActivity.kt  MemoryOffsets.kt
app/src/main/res/drawable/: status_background.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
